<resources>
    <string name="game_zjh">智勇三张</string>
    <string name="game_hd">海盗船长</string>
    <string name="game_zp">幸运转盘</string>
    <string name="game_nz">开心牛仔</string>
    <string name="game_ebb">二八贝</string>
    <string name="game_lhh">押庄龙虎</string>
    <string name="game_choose_game">选择游戏</string>
    <string name="game_wait_start">即将开始，请稍后...</string>
    <string name="game_charge">充值</string>
    <string name="game_win">赢了哦</string>
    <string name="game_wait_end">请等待游戏结束</string>
    <string name="game_wan">万</string>
    <string name="game_zjh_role_name_1">大乔x2</string>
    <string name="game_zjh_role_name_2">貂蝉x2</string>
    <string name="game_zjh_role_name_3">小乔x2</string>
    <string name="game_start_support">开始支持</string>
    <string name="game_show_result">揭晓结果</string>
    <string name="game_hd_role_name_1">罗伯茨x2</string>
    <string name="game_hd_role_name_0">平局x2</string>
    <string name="game_hd_role_name_2">基德x2</string>
    <string name="game_nz_name_1">星星x2</string>
    <string name="game_nz_name_2">球球x2</string>
    <string name="game_nz_name_3">仔仔x2</string>
    <string name="game_nz_name_1_2">星星</string>
    <string name="game_nz_name_2_2">球球</string>
    <string name="game_nz_name_3_2">仔仔</string>
    <string name="game_nz_sz_sf_record">胜负走势图</string>
    <string name="game_water">流水</string>
    <string name="game_nz_apply_sz">申请上下庄</string>
    <string name="game_nz_apply_sz_1">申请上庄</string>
    <string name="game_nz_apply_sz_2">下庄</string>
    <string name="game_nz_gx">恭喜</string>
    <string name="game_nz_sz">上庄</string>
    <string name="game_nz_ben">本家</string>
    <string name="game_nz_zhuang">庄家</string>
    <string name="game_nz_sz_xz">余额不足，已下庄</string>
    <string name="game_nz_sheng">胜</string>
    <string name="game_nz_fu">负</string>
    <string name="game_nz_sz_ls">庄家流水</string>
    <string name="game_nz_sz_ls_jh">局号</string>
    <string name="game_nz_sz_ls_px">牌型</string>
    <string name="game_nz_sz_ls_js">结算</string>
    <string name="game_nz_sz_list">上庄列表</string>
    <string name="game_nz_sz_order">顺序</string>
    <string name="game_nz_sz_player">玩家</string>
    <string name="game_nz_sz_coin">游戏币</string>
    <string name="game_nz_zhuang_1">庄</string>
    <string name="game_nz_apply_sz_yajin">上庄押金</string>
    <string name="game_nz_apply_sz_yajin_empty">请填写上庄押金</string>
    <string name="game_nz_apply_sz_yajin_zd">最低</string>
    <string name="game_lh_start_record">开局记录</string>
    <string name="game_lh_please_bet">请下注</string>
    <string name="game_lh_al_bet">已下注</string>
    <string name="game_lh_bet_confirm">确定</string>
    <string name="game_lh_l">龙</string>
    <string name="game_lh_hu">虎</string>
    <string name="game_lh_he">和</string>
    <string name="game_coin">金额：</string>
    <string name="game_persons">人数：</string>
    <string name="game_per">赔率：</string>
    <string name="game_can_win">可赢：</string>
    <string name="game_hu_win">虎赢</string>
    <string name="game_he_win">和赢</string>
    <string name="game_l_win">龙赢</string>
    <string name="game_lh_exit">退出</string>
    <string name="game_start">开始</string>
    <string name="game_balance">结算</string>
    <string name="game_bet_record">下注记录</string>
    <string name="game_bet">下注</string>
    <string name="game_kaijiang">开奖</string>
    <string name="game_lh_win">您赢了</string>
    <string name="game_lh_lose">您输了</string>
    <string name="game_cancel">取消</string>
    <string name="game_confirm">确认</string>
    <string name="game_waiting">等待</string>
    <string name="game_waiting_appeal">等待结算</string>
    <string name="game_l_win_confirm">您确定龙赢？</string>
    <string name="game_he_win_confirm">您确定是和赢吗？</string>
    <string name="game_hu_win_confirm">您确定是虎赢吗？</string>
    <string name="game_lh_wait_balance">等待结算</string>
    <string name="game_lh_balancing">当前为结算状态</string>
    <string name="game_lh_bet_tip">请先选择下注选项</string>

</resources>
