<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/game_bg_win"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp">
    <TextView
        android:id="@+id/tv_tit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/game_lh_win"
        android:textColor="@color/gameWhite"
        android:textSize="16sp"/>
    <TextView
        android:gravity="center"
        android:id="@+id/tv_which_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/game_l_win"
        android:textColor="@color/long_"
        android:textSize="30sp"/>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/tv_which_win"
        android:id="@+id/ll_bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/game_cancel"
            android:textColor="@color/gameWhite"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/game_confirm"
            android:textColor="@color/long_"/>

    </LinearLayout>
</RelativeLayout>